
- Fixed DNS self-tests relying on external data.

- Added support for DNS queries on an alternate port.

- Fixed problem with struct ucred not being pulled in properly.

- Fixed several problems with dns_qualify.
-------------------------------------------------------------------------------
Changes in version 2.03

- Reverted libbg-cli back to static linkage (for now) to fix problem
  with cli-generate generated code.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.02

- Fixed header include path in cli-generate.

- Rewrote iobuf and str number formatting using fmt.

- Added missing selftest.c file to the dist tarball (oops).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.01

- Fixed uint##.h headers.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.00

- Flattened out the installed headers and libraries.
  NOTE: This means this package is not backwards compatible.

- Added dns library (modified from public domain djbdns-1.05)

- Added wildcard handling and substitution to bg-installer.

- Added reversed IPv4 formatting functions (from Jorge Valdes).

- Added str_end* and str_case_end* functions, parallel to str_start* and
  str_case_start* but for suffixes.

- Added the ability to use arbitrary format functions in fmt_multi.

- Added support for enumerate and itemize in cli-generate.

- Added surfrand_uniform function, protected against bias.

Development of this version has been sponsored by FutureQuest, Inc.